--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "compilerOptions": {
-    "lib": ["dom", "es2017"],
+    "lib": [
+      "dom",
+      "es2017"
+    ],
     "jsx": "preserve",
     "target": "es5",
     // "module": "commonjs",
@@ -10,9 +13,28 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-     "paths": {
-      "@/*": ["*"]
-      }
+    "paths": {
+      "@/*": ["*"],
+      "~components/*": ["src/components/*"],
+      "~components": ["src/components"],
+      "~data/*": ["src/data/*"],
+      "~fonts/*": ["src/assets/fonts/*"],
+      "~image/*": ["public/image/*"],
+      "~sections/*": ["src/sections/*"],
+      "~styled/*": ["src/styles/*"]
+    },
+    "allowJs": true,
+    "noEmit": true,
+    "incremental": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true
   },
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ]
 }
