--- a/package.json
+++ b/package.json
@@ -18,33 +18,35 @@
     "@n8tb1t/use-scroll-position": "^2.0.3",
     "@next/mdx": "^14.1.0",
     "@types/mdx": "^2.0.10",
-    "bootstrap": "^5.0.2",
+    "bootstrap": "^5.3.2",
     "eslint-import-resolver-typescript": "^2.4.0",
     "framer-motion": "^4.1.17",
-    "next": "^11.1.2",
-    "next-images": "^1.8.1",
+    "next": "^14.1.0",
+    "next-images": "^1.8.5",
     "polished": "^4.1.3",
-    "react": "17.0.2",
+    "react": "18.2.0",
     "react-bootstrap": "^1.6.1",
     "react-countup": "^4.4.0",
-    "react-dom": "17.0.2",
-    "react-is": "^17.0.2",
+    "react-dom": "18.2.0",
+    "react-is": "^18.2.0",
     "react-masonry-css": "^1.0.16",
     "react-modal-image": "^2.6.0",
-    "react-modal-video": "^1.2.8",
-    "react-slick": "^0.28.1",
+    "react-modal-video": "2.0.1",
+    "react-slick": "^0.30.1",
     "react-typing-effect": "^2.0.5",
-    "sass": "^1.35.2",
+    "sass": "^1.70.0",
     "sharp": "^0.29.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
+    "@types/node": "20.11.7",
     "@types/react": "^18.2.48",
-    "babel-plugin-styled-components": "^1.13.2",
+    "@types/react-dom": "^18.2.18",
+    "babel-plugin-styled-components": "^1.13.3",
     "eslint": "7.30.0",
-    "eslint-config-next": "11.0.1",
+    "eslint-config-next": "^14.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "typescript": "^5.3.3"
   }
